<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Activities</string>
    <string name="detail_name">Color Detail</string>
    <string name="color_code_name">Color Code</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="radio1_text">Red</string>
    <string name="radio2_text">Green</string>
    <string name="radio3_text">Blue</string>
    <string name="button1_text">Change Color</string>
    <string name="button2_text">Detail&#8230;</string>
    <string name="button3_text">Color Code&#8230;</string>
    <string name="button_close_text">Close</string>    	
</resources>
